[package]
name = "poseidon2"
description = "Poseidon2 hash function implementation from renegade-crypto"
version = "0.1.10"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
renegade-crypto = { path = "/Users/s/code/renegade/renegade-crypto", default-features = false }
num-bigint = "0.4"
num-traits = "0.2"
wasm-bindgen = "0.2"

[profile.release]
lto = true
opt-level = 'z'
