[package]
name = "poseidon2"
description = "Poseidon2 hash function implementation from renegade-crypto"
version = "0.1.10"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
renegade-crypto = { path = "/Users/s/code/renegade/renegade-crypto", default-features = false }
num-bigint = "0.4"
num-traits = "0.2"
wasm-bindgen = "0.2"

[profile.release]
codegen-units = 1        # prefer efficiency to compile time
panic = "abort"          # use simple panics
opt-level = "z"          # optimize for size ("s" may also work)
strip = true             # remove debug info
lto = true               # link time optimization
debug = false            # no debug data
rpath = false            # no run-time search path
debug-assertions = false # prune debug assertions
incremental = false      # no incremental builds