[package]
name = "relayer-utils"
description = "Utility functions from the Renegade relayer"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
alloy-primitives = { version = "0.3.1", default-features = false }
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ed-on-bn254 = "0.4"
ark-ff = "0.4.2"
ark-serialize = "0.4"
base64 = "0.21"
ethers = "2.0"
eyre = "0.6.8"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4.3"
indexmap = "2.0.2"
lazy_static = "1.4"
k256 = { version = "0.13", features = ["expose-field"] }
num-bigint = "0.4"
num-traits = "0.2"
postcard = { version = "1.0.0", default-features = false, features = ["alloc"] }
renegade-crypto = { git = "https://github.com/renegade-fi/renegade.git", default-features = false }
ruint = { version = "1.11.1", features = ["num-bigint"] }
serde = "1.0.139"
serde_json = "1.0.64"
serde_with = { version = "3.4", default-features = false, features = [
    "macros",
    "alloc",
] }
sha2 = "0.10.8"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
wasm-bindgen = "0.2"
[dependencies.web-sys]
version = "0.3.4"
features = [ "console" ]
